# TIDAL

./: .gitignore  .gitmodules  README.md  environment.yml  load_package.sh  pyproject.toml  setup_multidraw.sh  setup_svfit.sh
CP_Tools/python/: Particle.py  PolarimetricA1.py  SCalculator.py  Utilities.py
CP_Tools/scripts/: assymetry.py  process_mt.py  process_tt.py  test_a1_SVFIT.py
Draw/: Makefile
Draw/interface/: MultiDraw.h
Draw/python/: Analysis.py  HiggsTauTauPlot_utilities.py  MultiDraw.py  PlotHistograms.py  Plotting.py  nodes.py
Draw/scripts/: HiggsTauTauPlot.py  combine_eras.py  config_plot.yaml  cpdecay_datacards.yaml  cpdecay_datacards_run2bins.yaml  cpdecay_medium.yaml  cpdecay_tight.yaml  cpdecay_vtight.yaml  hadd_cp_datacards.py  makeDatacards.py  makeDatacards_cpdecay.py  run_datacards.py  systematics.yaml
Draw/scripts/ip_corrections/: combine_histograms.py  config_plot.yaml  ip_corrector.py  makeDatacards.py  plot.py  plot_CDF.ipynb
Draw/scripts/mssm_search/: config_plot.yaml  makeDatacards_mssm.py
Draw/scripts/systematics/: dummy_plotting.ipynb  systematics.py  systematics.yaml
Draw/scripts/tauID_scalefactors/: config_SF_Templates.yaml  config_plot.yaml  cpdecay_datacards_run2bins.yaml  makeDatacards.py
Draw/scripts/zpt_reweighting/: config_plot.yaml  fix_negative_bins.py  makeDatacards_zpt.py  (+2 more)
Draw/src/: MultiDraw.cc
Tools/FastMTT/: fastmtt.py
jupyter_notebooks/: check_fastmtt_parquet.ipynb  check_svfit_parquet.ipynb
scripts/: MakeFuncPlots.py  Smoothing.py  get_trigger_signal_acceptance.py  run_fastmtt.py  run_svfit.py
