[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TIDAL"
version = "0.1.0"
description = "Tau Integrated Data Analysis Library"
readme = "README.md"
requires-python = "==3.9.18"
authors = [
    {name = "Klitos Savva"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["Draw", "CP_Tools"]
namespaces = false
